fixed filter on mobile

--- a/src/less/_filter.less
+++ b/src/less/_filter.less
@@ -97,6 +97,7 @@
 	align-items: center;
 	margin: 3px 6px 0px 6px;
 	position: relative;
+	width: 250px;
 
 	.fa {
 		display: none;
@@ -119,6 +120,7 @@
 	padding: 0 6px;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: block;
 }
 
 .filter-destination-number {
@@ -142,18 +144,10 @@
 	height: 348px;
 }
 
-.filter-destination {
-	width: 260px;
-}
-
 .smallest-device() {
 	.filter-type {
 		max-height: none;
 	}	
-
-	.filter-destination {
-		width: auto;
-	}
 
 	.filter-type-big {
 		height: auto;
